--- a/bioindex1.html
+++ b/bioindex1.html
@@ -22,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index.html">MECHANICAL DOMAIN</a>
+                        <a class="nav-link " href="index.html">MECHANICAL DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index2.html">ELECTRONICS DOMAIN</a>
+                        <a class="nav-link " href="index2.html">ELECTRONICS DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index3.html">SOFTWARE DOMAIN</a>
+                        <a class="nav-link " href="index3.html">SOFTWARE DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index4.html">MBA DOMAIN</a>
+                        <a class="nav-link " href="index4.html">MBA DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index5.html">BIOMEDICAL DOMAIN</a>
+                        <a class="nav-link " href="index5.html">BIOMEDICAL DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index6.html">NPD DOMAIN</a>
+                        <a class="nav-link " href="index6.html">NPD DOMAIN</a>
                     </li>
                 </ul>
             </div>
@@ -61,31 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex33.html">Cam Shaft Mechanism DIY Ventilator</a>
+                                    <a class="titles" href="imdex33.html">Cam Shaft Mechanism DIY Ventilator</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex34.html">Mobile Phone & Cash UV Disinfector for COVID</a>
+                                    <a class="titles" href="imdex34.html">Mobile Phone & Cash UV Disinfector for COVID</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex35.html">IOT IV Bag Monitoring and Alert System</a>
+                                    <a class="titles" href="imdex35.html">IOT IV Bag Monitoring and Alert System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex36.html">Entrance Temperature Detector for COVID</a>
+                                    <a class="titles" href="imdex36.html">Entrance Temperature Detector for COVID</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex37.html">Arduino COVID Disinfection Box</a>
+                                    <a class="titles" href="imdex37.html">Arduino COVID Disinfection Box</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex38.html">IOT Syringe Infusion Pump</a>
+                                    <a class="titles" href="imdex38.html">IOT Syringe Infusion Pump</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex39.html">Auto IV Pole with IV Bag Refill Alert</a>
+                                    <a class="titles" href="imdex39.html">Auto IV Pole with IV Bag Refill Alert</a>
                                 </li>
                                 <li class="items">
                                     <a class="titles" href="bioindex2.html">More title</a>
-                                </li>
-                                <li class="items">
-                                    <a class="title" href="">add</a>
                                 </li>
                             </ul>
                         </div>
