--- a/bioindex2.html
+++ b/bioindex2.html
@@ -22,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index.html">MECHANICAL DOMAIN</a>
+                        <a class="nav-link " href="index.html">MECHANICAL DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index2.html">ELECTRONICS DOMAIN</a>
+                        <a class="nav-link " href="index2.html">ELECTRONICS DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index3.html">SOFTWARE DOMAIN</a>
+                        <a class="nav-link " href="index3.html">SOFTWARE DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index4.html">MBA DOMAIN</a>
+                        <a class="nav-link " href="index4.html">MBA DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index5.html">BIOMEDICAL DOMAIN</a>
+                        <a class="nav-link " href="index5.html">BIOMEDICAL DOMAIN</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="2-inner-mech/index6.html">NPD DOMAIN</a>
+                        <a class="nav-link " href="index6.html">NPD DOMAIN</a>
                     </li>
                 </ul>
             </div>
@@ -61,28 +61,28 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex40.html">Wireless Patient Health Check</a>
+                                    <a class="titles" href="imdex40.html">Wireless Patient Health Check</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex41.html">IOT Virtual Doctor Robot</a>
+                                    <a class="titles" href="imdex41.html">IOT Virtual Doctor Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex42.html">IOT ECG Heart Monitor System</a>
+                                    <a class="titles" href="imdex42.html">IOT ECG Heart Monitor System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex43.html">DIY Ventilator using Arduino</a>
+                                    <a class="titles" href="imdex43.html">DIY Ventilator using Arduino</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex44.html">Android Controlled Robotic Arm</a>
+                                    <a class="titles" href="imdex44.html">Android Controlled Robotic Arm</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex45.html">IOT Paralysis Patient Health Care</a>
+                                    <a class="titles" href="imdex45.html">IOT Paralysis Patient Health Care</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex46.html">Smart Watch for Elderly</a>
+                                    <a class="titles" href="imdex46.html">Smart Watch for Elderly</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="2-inner-mech/imdex47.html">GSM Patient Health Monitoring</a>
+                                    <a class="titles" href="imdex47.html">GSM Patient Health Monitoring</a>
                                 </li>
                             </ul>
                         </div>
