--- a/mechindex.html
+++ b/mechindex.html
@@ -63,7 +63,7 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="index-ma1.html">major mech projects</a>
+                                    <a class="titles" href="index-ma1.html">Major mech projects</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="index-ma1.html">Mini projects</a>
