--- a/mechindex.html
+++ b/mechindex.html
@@ -66,7 +66,7 @@
                                     <a class="titles" href="index-ma1.html">Major mech projects</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="index-ma1.html">Mini projects</a>
+                                    <a class="titles" href="index-mi1.html">Mini projects</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="index-l1.html">Latest mech project</a>
