--- a/eeeindx.html
+++ b/eeeindx.html
@@ -63,7 +63,7 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="indexavr.html">major Electric projects</a>
+                                    <a class="titles" href="indexavr.html">Major Electric projects</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="indexdr.html">DRONE projects</a>
