--- a/indexavr.html
+++ b/indexavr.html
@@ -64,28 +64,31 @@
                                     <a class="titles" href="">Smart Shopping Trolley that Follows Customer</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex96.html">Programmable Omni Direction Robotic Arm Vehicle</a>
+                                    <a class="titles" href="">Programmable Omni Direction Robotic Arm Vehicle</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex97.html">Car Safety System With Airbag Notification</a>
+                                    <a class="titles" href="">Car Safety System With Airbag Notification</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex98.html">Automatic Noise Level Monitor & Controller System</a>
+                                    <a class="titles" href="">Automatic Noise Level Monitor & Controller System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex99.html">IOT Covid Patient Health Monitor in Quarantine</a>
+                                    <a class="titles" href="">IOT Covid Patient Health Monitor in Quarantine</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex100.html">IOT Garbage Monitoring Using Raspberry Pi</a>
+                                    <a class="titles" href="">IOT Garbage Monitoring Using Raspberry Pi</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex101.html">Third Eye For Blind Ultrasonic Vibrator Glove</a>
+                                    <a class="titles" href="">Third Eye For Blind Ultrasonic Vibrator Glove</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex102.html">Women Safety Night Patrolling Robot</a>
+                                    <a class="titles" href="">Women Safety Night Patrolling Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="imdex103.html">Auto Water Pump Switcher</a>
+                                    <a class="titles" href="">Auto Water Pump Switcher</a>
+                                </li>
+                                <li class="items">
+                                    <a class="titles" href="indexavr1.html">More titles</a>
                                 </li>
                             </ul>
                         </div>
