--- a/indexavr1.html
+++ b/indexavr1.html
@@ -67,7 +67,7 @@
                                     <a class="titles" href="">Zigbee based Wireless Home Security System</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">127.Intelligent Surveillance and Night Patrolling Drone</a>
+                                    <a class="titles" href="">Intelligent Surveillance and Night Patrolling Drone</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="">Automatic Waste Segregation System</a>
