--- a/indexavr3.html
+++ b/indexavr3.html
@@ -61,10 +61,10 @@
                         <div class="text">
                             <ul>
                                 <li class="item">
-                                    <a class="titles" href="">147.Vertical Axis Wind Turbine With Inverter</a>
+                                    <a class="titles" href="">1Vertical Axis Wind Turbine With Inverter</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">146.Rotating Solar Inverter Project using Microcontroller 50W</a>
+                                    <a class="titles" href="">Rotating Solar Inverter Project using Microcontroller 50W</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="">Arduino Covid Disinfection Box</a>
@@ -76,10 +76,10 @@
                                     <a class="titles" href="">IOT Dog Daycare Robot</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">114.Dual Mount Auto Sanitizer Dispenser</a>
+                                    <a class="titles" href="">Dual Mount Auto Sanitizer Dispenser</a>
                                 </li>
                                 <li class="item">
-                                    <a class="titles" href="">115.Auto Indoor Hydroponic Fodder Grow Chamber</a>
+                                    <a class="titles" href="">Auto Indoor Hydroponic Fodder Grow Chamber</a>
                                 </li>
                                 <li class="item">
                                     <a class="titles" href="">Thermal Screening Drone</a>
